@@ -6,7 +6,8 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
--
+- In the rendering of boxes fixed wrong use of python extend : should use
+  append.
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
